Accept a single input or multiple